# akri

./: .dockerignore  .gitignore  ADOPTERS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  GOVERNANCE.md  LICENSE  Makefile  NOTICE.txt  OWNERS  PoC.md  README.md  SECURITY.md  SUMMARY.md  akri-0.0.34.tgz  akri-0.0.35.tgz  akri-0.0.36.tgz  akri-0.0.44.tgz  akri-0.1.5.tgz  akri-0.10.4.tgz  akri-0.12.20.tgz  akri-0.12.9.tgz  akri-0.13.8.tgz  akri-0.6.19.tgz  akri-0.6.5.tgz  akri-0.7.0.tgz  akri-0.8.23.tgz  akri-0.8.4.tgz  akri-dev-0.0.36.tgz  akri-dev-0.0.37.tgz  akri-dev-0.0.38.tgz  akri-dev-0.0.39.tgz  akri-dev-0.0.40.tgz  akri-dev-0.0.41.tgz  akri-dev-0.0.42.tgz  akri-dev-0.0.43.tgz  akri-dev-0.0.44.tgz  (+182 more)
agent/: Cargo.toml  README.md  build.rs
agent/proto/: README.md  discovery.proto  pluginapi.proto  pluginregistration.proto  podresources.proto
agent/src/: main.rs
agent/src/device_manager/: cdi.rs  in_memory.rs  mod.rs
agent/src/discover/: discovery.rs  mod.rs  register.rs
agent/src/discovery_handler_manager/: discovery_handler_registry.rs  discovery_property_solver.rs  embedded_handler.rs  mod.rs  registration_socket.rs
agent/src/discovery_handler_manager/diagrams/: dh_device.mmd  dh_query.mmd  dh_registration.mmd
agent/src/plugin_manager/: device_plugin_instance_controller.rs  device_plugin_runner.rs  device_plugin_slot_reclaimer.rs  mod.rs  pluginregistration.rs  v1.rs  v1beta1.rs
agent/src/protocols/: mod.rs
agent/src/protocols/coap_core/: discovery_handler.rs  discovery_impl.rs  mod.rs
agent/src/protocols/debug_echo/: discovery_handler.rs  mod.rs
agent/src/protocols/http/: discovery_handler.rs  mod.rs
agent/src/protocols/nessie/: discovery_handler.rs  mod.rs
agent/src/protocols/onvif/: discovery_handler.rs  discovery_impl.rs  mod.rs
agent/src/protocols/opcua/: discovery_handler.rs  discovery_impl.rs  mod.rs
agent/src/protocols/other/: discovery_handler.rs  mod.rs
agent/src/protocols/udev/: discovery_handler.rs  discovery_impl.rs  mod.rs  udev_rule_grammar.pest
agent/src/protocols/zeroconf/: constants.rs  discovery_handler.rs  discovery_handler_tests.rs  filter.rs  filter_tests.rs  id.rs  id_tests.rs  map.rs  map_tests.rs  mod.rs
agent/src/util/: config_action.rs  constants.rs  crictl_containers.rs  device_plugin_builder.rs  device_plugin_service.rs  discovery_configuration_controller.rs  discovery_operator.rs  embedded_discovery_handlers.rs  metrics.rs  mod.rs  periodic_discovery.rs  registration.rs  slot_reconciliation.rs  stopper.rs  streaming_extension.rs  v1beta1.rs
controller/: Cargo.toml
controller/src/: main.rs
controller/src/util/: config_action.rs  context.rs  controller_ctx.rs  instance_action.rs  mod.rs  node_watcher.rs  pod_action.rs  pod_watcher.rs  shared_test_utils.rs
discovery-handler-modules/coap-discovery-handler/: .gitignore  Cargo.toml  Dockerfile.discovery-handler
discovery-handler-modules/coap-discovery-handler/src/: discovery_handler.rs  discovery_utils.rs  main.rs
discovery-handler-modules/debug-echo-discovery-handler/: Cargo.toml
discovery-handler-modules/debug-echo-discovery-handler/src/: main.rs
discovery-handler-modules/http-discovery-handler/: Cargo.toml
discovery-handler-modules/http-discovery-handler/src/: discovery_handler.rs  main.rs
discovery-handler-modules/onvif-discovery-handler/: Cargo.toml
discovery-handler-modules/onvif-discovery-handler/src/: main.rs
discovery-handler-modules/opcua-discovery-handler/: Cargo.toml
discovery-handler-modules/opcua-discovery-handler/src/: main.rs
discovery-handler-modules/udev-discovery-handler/: Cargo.toml
discovery-handler-modules/udev-discovery-handler/src/: main.rs
discovery-handlers/debug-echo/: Cargo.toml
discovery-handlers/debug-echo/src/: discovery_handler.rs  lib.rs
discovery-handlers/onvif/: Cargo.toml
discovery-handlers/onvif/src/: credential_store.rs  discovery_handler.rs  discovery_impl.rs  discovery_utils.rs  lib.rs  username_token.rs
discovery-handlers/opcua/: Cargo.toml
discovery-handlers/opcua/src/: discovery_handler.rs  discovery_impl.rs  lib.rs  wrappers.rs
discovery-handlers/udev/: Cargo.toml
discovery-handlers/udev/src/: device_utils.rs  discovery_handler.rs  discovery_impl.rs  lib.rs  udev_rule_grammar.pest  usb_utils.rs  wrappers.rs
discovery-utils/: Cargo.toml  build.rs
discovery-utils/proto/: discovery.proto
discovery-utils/src/: call_agent_service.rs  filtering.rs  lib.rs  registration_client.rs
discovery-utils/src/discovery/: mod.rs  v0.rs
samples/brokers/coap-broker/: Cargo.toml
samples/brokers/coap-broker/src/: http_coap.rs  main.rs
samples/brokers/coap-core-broker/: Cargo.toml  Dockerfile.coap-core
samples/brokers/coap-core-broker/src/: http_coap.rs  main.rs
samples/brokers/http/: Cargo.toml  Dockerfile.standalone  build.rs  build.sh  http.yaml
samples/brokers/http/Dockerfiles/: grpc.broker  grpc.client  standalone
samples/brokers/http/kubernetes/: http.grpc.broker.yaml  http.grpc.client.yaml  http.yaml
samples/brokers/http/proto/: http.proto
samples/brokers/http/src/: main.rs
samples/brokers/nessie/: Cargo.toml  Dockerfile  build.rs  nessie.proto  nessie.yaml
samples/brokers/nessie/src/: main.rs
samples/brokers/udev-video-broker/: Cargo.toml  README.md  build.rs
samples/brokers/udev-video-broker/src/: main.rs
shared/: Cargo.toml
shared/src/: gen_crds.rs  lib.rs
shared/src/akri/: case_insensitive_hashmap.rs  configuration.rs  configuration_state.rs  instance.rs  metrics.rs  mod.rs
shared/src/coap_core/: mod.rs
shared/src/k8s/: api.rs  job.rs  mod.rs  node.rs  pod.rs  service.rs
shared/src/onvif/: mod.rs
shared/src/os/: env_var.rs  mod.rs  signal.rs
shared/src/uds/: mod.rs  unix_stream.rs
test/e2e/: README.md  conftest.py  helpers.py  pyproject.toml  test_core.py  test_udev.py  test_webhook.py
test/e2e/yaml/: debugEchoConfiguration.yaml  udevDevNullConfiguration.yaml  udevGroupedConfiguration.yaml  webhookInvalidConfiguration.yaml  webhookValidConfiguration.yaml
webhooks/validating/configuration/: Cargo.toml  README.md
(+299 files in other folders)
