[patch.crates-io]
# Patch needed to get yet unreleased version with a fix for an error with recent rust/cargo
opcua = { git = 'https://github.com/locka99/opcua' }
# Patch is still needed, using one from upstream PR for now
h2 = { git = 'https://github.com/arthurlm/h2' }

[workspace]
members = [
    "shared", 
    "agent", 
    "controller", 
    "samples/brokers/udev-video-broker", 
    "webhooks/validating/configuration",
    "discovery-utils", 
    "discovery-handlers/debug-echo", 
    "discovery-handlers/onvif", 
    "discovery-handlers/opcua", 
    "discovery-handlers/udev", 
    "discovery-handler-modules/debug-echo-discovery-handler", 
    "discovery-handler-modules/onvif-discovery-handler", 
    "discovery-handler-modules/opcua-discovery-handler", 
    "discovery-handler-modules/udev-discovery-handler",
]
