[patch.crates-io]
# Patch is still needed, using one from upstream PR for now, hosted on a fork of ours to help
# with supply chain integrity.
h2 = { git = 'https://github.com/project-akri/h2', branch = 'patch-authority'}

[workspace]
members = [
    "shared", 
    "agent", 
    "controller", 
    "samples/brokers/udev-video-broker", 
    "webhooks/validating/configuration",
    "discovery-utils", 
    "discovery-handlers/debug-echo", 
    "discovery-handlers/onvif", 
    "discovery-handlers/opcua", 
    "discovery-handlers/udev", 
    "discovery-handler-modules/debug-echo-discovery-handler", 
    "discovery-handler-modules/onvif-discovery-handler", 
    "discovery-handler-modules/opcua-discovery-handler", 
    "discovery-handler-modules/udev-discovery-handler",
]
resolver = "2"

[workspace.package]
version = "0.13.19"
edition = "2021"
license = "Apache-2.0"
homepage = "https://docs.akri.sh/"
repository = "https://github.com/project-akri/akri"
rust-version = "1.85"
authors = ["The Akri Team"]
