[package]
name = "agent"
version = "0.8.20"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>", "<bfjelds@microsoft.com>"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-debug-echo = { path = "../discovery-handlers/debug-echo" }
akri-discovery-utils = { path = "../discovery-utils" }
akri-onvif = { path = "../discovery-handlers/onvif", optional = true }
akri-opcua = { path = "../discovery-handlers/opcua", optional = true }
akri-udev = { path = "../discovery-handlers/udev", optional = true }
akri-shared = { path = "../shared" }
anyhow = "1.0.38"
async-stream = "0.3"
async-trait = "0.1.0"
blake2 = "0.9.0"
chrono = "0.4.10"
cfg-if = "1.0.0"
env_logger = "0.9.0"
futures = { version = "0.3.1", package = "futures" }
futures-core = "0.3"
futures-util = "0.3"
hyper = "0.14.2"
h2 = "=0.3.3"
kube = { version = "0.69.1",  features = ["derive"] }
kube-runtime = "0.69.1"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["schemars", "v1_23"] }
lazy_static = "1.4"
log = "0.4"
mockall_double = "0.2.0"
prometheus = { version = "0.12.0", features = ["process"] }
prost = "0.8.0"
prost-types = "0.8.0"
rand = "0.8.2"
serde = "1.0.104"
serde_json = "1.0.45"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = "0.5.2"
tower = "0.4.8"
url = "2.1.0"
uuid = { version = "0.8.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.5.2"

[dev-dependencies]
# for testing using a simple discovery handler
akri-discovery-utils = { path = "../discovery-utils", features = ["mock-discovery-handler"] }
akri-onvif = { path = "../discovery-handlers/onvif" }
akri-opcua = { path = "../discovery-handlers/opcua" }
akri-udev = { path = "../discovery-handlers/udev"}
mockall = "0.10.2"
mock_instant = { version = "0.2", features = ["sync"] }
tempfile = "3.1.0"

[features]
# To embed discovery handlers, add the desired discovery handler features to default and "agent-full".
# Or set the features when building the agent with
# `cargo build --manifest-path agent/Cargo.toml --features "agent-full onvif-feat opcua-feat udev-feat"`
default = []
onvif-feat = [ "akri-onvif"]
opcua-feat = ["akri-opcua"]
udev-feat = ["akri-udev"]
agent-full = []
