[package]
name = "controller"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
akri-shared = { path = "../shared" }
anyhow = "1.0.38"
async-std = "1.5.0"
chrono = "0.4.10"
env_logger = "0.11.8"
futures = "0.3.1"
k8s-openapi = { version = "0.25.0", default-features = false, features = ["schemars", "v1_33"] }
kube = { version = "1.0.0", features = ["client", "derive", "runtime"] }
lazy_static = "1.4"
log = "0.4"
prometheus = { version = "0.14.0", features = ["process"] }
tokio = { version = "1.0.2", features = ["full"] }

[dev-dependencies]
mockall = "0.12"
serde_json = "1.0.45"

