[package]
name = "akri-discovery-utils"
version = "0.1.0"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = { version = "0.1.0", features = ["tls"] }

# for run_discovery_server
akri-shared = { path = "../shared" }
futures = { version = "0.3.1", package = "futures" }

# for registration_client
log = "0.4"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "time", "stream", "fs", "macros", "uds"] }
tower = "0.3" 

[build-dependencies]
tonic-build = "0.1.1"