[package]
name = "akri-discovery-utils"
version = "0.8.20"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-shared = { path = "../shared" }
async-stream = "0.3"
anyhow = "1.0.38"
async-trait = { version = "0.1.0", optional = true }
futures = { version = "0.3.1", package = "futures" }
log = "0.4"
prost = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.11"
tempfile = { version = "3.1.0", optional = true }
tokio = { version = "1.0.1", features = ["time", "net", "sync"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = { version = "0.5.2", features = ["tls"] }
tower = "0.4.8"

[features]
mock-discovery-handler = ["async-trait", "tempfile"]

[dev-dependencies]
async-trait = "0.1.0"
tempfile = "3.1.0"

[build-dependencies]
tonic-build = "0.5.2"
