[package]
name = "akri-shared"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.0"
either = "1.13"
k8s-openapi = { version = "0.22.0", default-features = false, features = ["schemars", "v1_25"] }
# k8s-openapi = { version = "0.22.0", features = ["schemars"]}
kube = { version = "0.91.0",  features = ["derive" ] }
log = "0.4"
mockall = "0.12"
prometheus = { version = "0.12.0", features = ["process"] }
rand = "0.8.3"
schemars = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.0.1", features = ["full"] }
tonic = "0.10"
tower = "0.4.8"
warp = "0.3.6"

[dev-dependencies]
env_logger = "0.10.0"

[[bin]]
name="gen_crds"
path="src/gen_crds.rs"