[package]
name = "debug-echo-discovery-handler"
version = "0.6.10"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-debug-echo = { path = "../../discovery-handlers/debug-echo" }
env_logger = "0.8.3"
log = "0.4"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "time", "stream", "fs", "macros", "uds"] }
