[package]
name = "debug-echo-discovery-handler"
version = "0.10.5"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"
rust-version = "1.68.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-debug-echo = { path = "../../discovery-handlers/debug-echo" }
env_logger = "0.9.0"
log = "0.4"
tokio = { version = "1.0.1" }
