[package]
name = "http-discovery-handler"
version = "0.1.0"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

[dependencies]
# TODO: Change this to Akri main when the library is merged
akri-discovery-utils = { git = "https://github.com/project-akri/akri", branch = "main", package = "akri-discovery-utils" }
async-trait = "0.1.0"
tokio = { version = "1.0.1", default-features = false, features = ["time", "net", "sync"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = { version = "0.5.2", default-features = false, features = ["tls"] }
anyhow = "1.0.38"
reqwest = "0.10.8"
env_logger = "0.9.0"
log = "0.4"