[package]
name = "onvif-discovery-handler"
version = "0.8.2"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-onvif = { path = "../../discovery-handlers/onvif" }
env_logger = "0.9.0"
log = "0.4"
tokio = { version = "1.0.1" }