[package]
name = "onvif-discovery-handler"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-onvif = { path = "../../discovery-handlers/onvif" }
env_logger = "0.11.8"
log = "0.4"
tokio = { version = "1.0.1" }
