[package]
name = "opcua-discovery-handler"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-opcua = { path = "../../discovery-handlers/opcua" }
env_logger = "0.10.0"
log = "0.4"
tokio = { version = "1.0.1" }
