[package]
name = "udev-discovery-handler"
version = "0.12.17"
license = "Apache-2.0"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"
rust-version = "1.68.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-udev = { path = "../../discovery-handlers/udev" }
env_logger = "0.10.0"
log = "0.4"
tokio = { version = "1.0.1" }
