[package]
name = "akri-onvif"
version = "0.8.20"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-shared = { path = "../../shared" }
anyhow = "1.0.38"
async-trait = "0.1.0"
bytes = "1.0.1"
env_logger = "0.9.0"
futures-util = "0.3"
hyper = { version = "0.14.11", package = "hyper" }
log = "0.4"
serde = "1.0.104"
serde_json = "1.0.45"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
sxd-document = "0.3.0"
sxd-xpath = "0.4.0"
tokio = { version = "1.0", features = ["time", "net", "sync"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = { version = "0.5.2", features = ["tls"] }
uuid = { version = "0.8.1", features = ["v4"] }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"

[dev-dependencies]
mockall = "0.10.2"
