[package]
name = "akri-onvif"
version = "0.12.20"
license = "Apache-2.0"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2021"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
anyhow = "1.0.38"
async-trait = "0.1.0"
base64 = "0.13.1"
bytes = "1.0.1"
chrono = "0.4.10"
futures-util = "0.3"
hyper = { version = "0.14.11", package = "hyper" }
log = "0.4"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.45"
sha1 = "0.6.1"
sxd-document = "0.3.0"
sxd-xpath = "0.4.0"
tokio = { version = "1.0", features = ["time", "net", "sync"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = { version = "0.10", features = ["tls"] }
uuid = { version = "0.8.1", features = ["v4"] }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"

[dev-dependencies]
env_logger = "0.10.0"
mockall = "0.12"

