[package]
name = "akri-opcua"
version = "0.3.1"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-shared = { path = "../../shared" }
anyhow = "1.0.38"
async-trait = "0.1.0"
env_logger = "0.6.1"
futures-util = "0.3"
log = "0.4"
opcua-client = "0.7.0"
prost = "0.6"
serde = "1.0.104"
serde_json = "1.0.45"
serde_yaml = "0.8.11"
serde_derive = "1.0.1"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "time", "stream", "fs", "macros", "uds"] }
tonic = {version = "0.1.0", features = ["tls"] }
url = "2.2.0"

[dev-dependencies]
mockall = "0.9.0"