[package]
name = "akri-opcua"
version = "0.8.20"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
akri-shared = { path = "../../shared" }
anyhow = "1.0.38"
async-trait = "0.1.0"
env_logger = "0.9.0"
futures-util = "0.3"
log = "0.4"
opcua = { version = "0.10", features = ["client"] }
prost = "0.8.0"
serde = "1.0.104"
serde_json = "1.0.45"
serde_yaml = "0.8.11"
serde_derive = "1.0.1"
tokio = { version = "1.0.2", features = ["time", "net", "sync"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = { version = "0.5.2", features = ["tls"] }
url = "2.2.0"

[dev-dependencies]
mockall = "0.10.2"
