[package]
name = "akri-udev"
version = "0.12.20"
license = "Apache-2.0"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>"]
edition = "2021"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { path = "../../discovery-utils" }
anyhow = "1.0.38"
async-trait = "0.1.0"
log = "0.4"
pest = "2.0"
pest_derive = "2.0"
regex = "1"
serde = "1.0.104"
serde_derive = "1.0.104"
tokio = { version = "1.0", features = ["time", "net", "sync"] }
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = { version = "0.10", features = ["tls"] }
udev = "0.5"

[dev-dependencies]
env_logger = "0.10.0"
mockall = "0.12"
serde_json = "1.0.45"
