[package]
name = "coap-broker"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-shared = { path = "../../../shared" }
coap = { git = "https://github.com/Covertness/coap-rs" }
coap-lite = "0.5"
env_logger = "0.8.4"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.3"
warp = "0.3"
futures = "0.3"
anyhow = "1.0.38"
