[package]
name = "coap-core-broker"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>", "Kate Goldenring <kate.goldenring@microsoft.com>", "<bfjelds@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-shared = { path = "../../../shared" }
coap = "0.9"
coap-lite = "0.3"
env_logger = "0.8.2"
log = "0.4.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
