[package]
name = "http"
version = "0.1.0"
authors = ["DazWilkin <daz.wilkin@gmail.com>"]
edition = "2018"

[dependencies]
akri-shared = { path = "../../../shared" }
futures = "0.3"
futures-util = "0.3"
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
