[package]
name = "udev-video-broker"
version = "0.8.20"
authors = ["Kate Goldenring <kate.goldenring@microsoft.com>", "<bfjelds@microsoft.com>"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-shared = { path = "../../../shared" }
env_logger = "0.9.0"
lazy_static = "1.4"
log = "0.4.3"
prometheus = { version = "0.12.0", features = ["process"] }
prost = "0.8.0"
tokio = { version = "1.0.1", features = ["time", "fs", "macros", "signal"] }
tonic = "0.5.2"
rscam = "0.5.5"

[build-dependencies]
tonic-build = "0.5.2"
